docs/tests/parser/types/invalid/TypeVectorNonIntegral.b
fn void test() {
    let vec<x> v;
}
